# wiki-q-and-a

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  README.md  WRITEUP.md  pyproject.toml
plans/: eval_harness.md  search_wikipedia.md
prompts/: system_v1.md  system_v1_1.md  system_v1_2.md
scripts/: README.md  eval_v1.py  eval_v1_1.py  eval_v1_2.py  redact_transcripts.py
src/wiki_qa/: __init__.py  __main__.py  agent.py  agent_contract.py  agent_stub.py  cli.py  formatting.py  parser.py  tools.py  wikipedia.py
src/wiki_qa/eval/: __init__.py  __main__.py  behavior_checks.py  calibration.py  dataset.py  judge.py  results.py  runner.py  schema.py
tests/eval/: iterations.md  rubric.md
tests/eval/cases/: dev.yaml  v1.yaml
tests/eval/fixtures/: agent_outputs.yaml
tests/fixtures/mediawiki/: einstein_search.json
tests/integration/: test_wikipedia_live.py
tests/unit/: test_agent.py  test_agent_stub.py  test_cli.py  test_formatting.py  test_parser.py  test_tools.py  test_wikipedia.py
tests/unit/eval/: test_behavior_checks.py  test_calibration.py  test_cli.py  test_dataset.py  test_dev_cases_smoke.py  test_judge.py  test_runner.py
transcripts/redacted/combined-html/: index.html  page-001.html  page-002.html  page-003.html  page-004.html  page-005.html  page-006.html  page-007.html  page-008.html  page-009.html  page-010.html  page-011.html  page-012.html  page-013.html  page-014.html  page-015.html  page-016.html  page-017.html  page-018.html  page-019.html  page-020.html  page-021.html
